--- a/SpringExample/pom.xml
+++ b/SpringExample/pom.xml
@@ -24,6 +24,10 @@
 		<version>2.5.6</version>
 	</dependency>
     
-    
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>2.5</version>
+    </dependency>    
   </dependencies>
 </project>
