--- a/SpringExample/pom.xml
+++ b/SpringExample/pom.xml
@@ -22,6 +22,12 @@
 		<artifactId>spring</artifactId>
 		<version>2.5.6</version>
 	</dependency>
+	
+	<repository>              
+          <id>central</id>
+          <name>Central</name>
+          <url>http://repo1.maven.org/maven2</url>
+	</repository>
     
     <dependency>
     <groupId>org.apache.maven.plugins</groupId>
