--- a/SpringExample/pom.xml
+++ b/SpringExample/pom.xml
@@ -23,12 +23,14 @@
 		<version>2.5.6</version>
 	</dependency>
 	
+	<dependency>	
 	<repository>              
           <id>central</id>
           <name>Central</name>
           <url>http://repo1.maven.org/maven2</url>
 	</repository>
-    
+   	</dependency>
+ 
     <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-resources-plugin</artifactId>
