--- a/SpringExample/pom.xml
+++ b/SpringExample/pom.xml
@@ -6,7 +6,7 @@
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>SpringExample</name>
-	<url>http://repo1.maven.org/maven2</url>
+  <url>https://repo.maven.apache.org/maven2/org/apache/maven/plugins/maven-clean-plugin/2.4.1/maven-clean-plugin-2.4.1.pom</url>
  
   <dependencies>
     <dependency>
